--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,16 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Cache-Funky-Storage-Memcached
-version:      0.04
-version_from: lib/Cache/Funky/Storage/Memcached.pm
-installdirs:  site
-requires:
-    Cache::Funky:                  0.06
-    Cache::Funky::Storage:         0
-    Cache::Memcached:              0
-    Test::More:                    0
-
+abstract: Cache::Funky  Memcached Storage.
+author: Tomohiro Teranishi <tomohiro.teranishi@gmail.com>
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+generated_by: Module::Install version 0.64
+license: perl
+name: Cache-Funky-Storage-Memcached
+no_index: 
+  directory: 
+    - inc
+    - t
+requires: 
+  Cache::Funky: 0
+  Cache::Funky::Storage: 0
+  Cache::Memcached: 0
+  Test::More: 0
+version: 0.05
